[MakeFile][build]  Removed build directory so that you can build directly from the src/ directory with 'make depend' followed by 'make'

--- a/src/MakefileI
+++ b/src/MakefileI
@@ -1,7 +1,7 @@
 OCAMLC=ocamlc
 OCAMLOPT=ocamlopt
 OCAMLDEP=ocamldep
-SRCDIR=../src
+SRCDIR=.
 OBJDIR=../objects
 INCLUDES=-I $(SRCDIR)
 OCAMLFLAGS=$(INCLUDES)    # add other options for ocamlc here
