Adding additional clean up actions to 'make clean' command

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,6 +2,8 @@
 
 clean:
 	rm -f ../lpi
-	rm -f ../objects/*.cm*
+	rm -f $(OBJDIR)/*.cm*
+	rm -f $(SRCDIR)/*.cm* $(SRCDIR)/*~
+	rm -f $(SRCDIR)/parser.ml $(SRCDIR)/parser.mli $(SRCDIR)/lexer.ml
 
 include $(OBJDIR)/.depend
