Added opam install file and refactored Makefile

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,7 @@
 -include MakeFileI
 
 clean:
-	rm -f ../lpi ../lpi-server ../liblpi.cma
+	rm -f ../lpi-repl ../lpi-server ../liblpi.cma
 	rm -f $(OBJDIR)/*.cm*
 	rm -f $(SRCDIR)/*.cm* $(SRCDIR)/*~
 	rm -f $(SRCDIR)/parser.ml $(SRCDIR)/parser.mli $(SRCDIR)/lexer.ml
