moved objects dir into src to fix linux opam install

--- a/src/MakefileI
+++ b/src/MakefileI
@@ -3,7 +3,7 @@ OCAMLFIND_C=ocamlfind ocamlc
 OCAMLOPT=ocamlopt
 OCAMLDEP=ocamldep
 SRCDIR=.
-OBJDIR=../objects
+OBJDIR=objects
 INCLUDES=-I $(SRCDIR)
 OCAMLFLAGS=$(INCLUDES)    # add other options for ocamlc here
 OCAMLFIND_FLAGS=-linkpkg -package lwt,cohttp,cohttp.lwt,core,lpi -thread \
