Removed web-server from repo and moved it to http://github.com/baxtersa/lpi-browser-repl

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,21 +1,15 @@
 OCAMLC=ocamlc
 OCAMLFIND=ocamlfind
-OCAMLOPT=ocamlopt
 OCAMLDEP=ocamldep
 SRCDIR=.
 OBJDIR=../objects
 INCLUDES=-I $(SRCDIR)
 OCAMLFLAGS=$(INCLUDES)    # add other options for ocamlc here
-OCAMLFIND_FLAGS=-linkpkg -package lwt,cohttp,cohttp.lwt,core,lpi -thread \
-		$(INCLUDES)
-OCAMLOPTFLAGS=$(INCLUDES) # add other options for ocamlopt here
 
 LIBLPI_OBJS= ast.cmo environment.cmo basis.cmo parser.cmo \
 	     lexer.cmo staticsemantics.cmo interpret.cmo
 
 LPI_OBJS= interpreter.cmo
-
-LPI_SERVER_OBJS= main.cmo
 
 build: 	$(LIBLPI_OBJS)
 	$(OCAMLC) -a $(OCAMLFLAGS) unix.cma $(LIBLPI_OBJS) -o ../lpi.cma
@@ -23,10 +17,6 @@ build: 	$(LIBLPI_OBJS)
 
 lpi:	$(LPI_OBJS)
 	$(OCAMLC) -o ../lpi-repl $(OCAMLFLAGS) ../lpi.cma $(LPI_OBJS)
-	mv $(SRCDIR)/*.cm* $(OBJDIR)
-
-server:
-	$(OCAMLFIND) $(OCAMLC) -o ../lpi-server $(OCAMLFIND_FLAGS) $(LPI_SERVER_OBJS)
 	mv $(SRCDIR)/*.cm* $(OBJDIR)
 
 # Common rules
@@ -50,7 +40,7 @@ install:
 	../objects/*.cm*
 
 clean:
-	rm -f ../lpi-repl ../lpi-server ../liblpi.cma
+	rm -f ../lpi-repl ../liblpi.cma
 	rm -f $(OBJDIR)/*.cm*
 	rm -f $(SRCDIR)/*.cm* $(SRCDIR)/*~
 	rm -f $(SRCDIR)/parser.ml $(SRCDIR)/parser.mli $(SRCDIR)/lexer.ml
